automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,11 @@
-
+<html>
+<head>
+  <title>IdeaBox</tittle>
+  </head>
+  <body>
+    <h1>Hello World, Veiw <Template Edition></h1>
+    </body>
+    </html>
+    
+      
+    
