--- a/views/index.erb
+++ b/views/index.erb
@@ -3,9 +3,14 @@
   <title>IdeaBox</tittle>
   </head>
   <body>
-    <h1>Hello World, Veiw <Template Edition></h1>
-    </body>
-    </html>
-
-
-    
+    <h1>Hello World</h1>
+    <form action='/' method='POST'
+    <p>
+      your Idea:
+    </p>
+    <input type='text name='idea_tittle'/><br/>
+    <texttarea name='idea_description'></textarea>
+      <input type='submit'/>
+    </form>
+  </body>
+</htmal>  
