automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>IdeaBox</tittle>
+  <title>IdeaBox</title>
   </head>
   <body>
     <h1>Hello World</h1>
@@ -8,9 +8,9 @@
     <p>
       your Idea:
     </p>
-    <input type='text name='idea_tittle'/><br/>
+    <input type='text name='idea_title'/><br/>
     <texttarea name='idea_description'></textarea>
       <input type='submit'/>
     </form>
   </body>
-</html>  
+</html>
